# Hiroshi

./: Cargo.toml  README.md  changelog.md  readme
docs/: .atlas-analysis.json  agents_guide.md  cron_guide.md  daemon_guide.md  docs.json  getting_started.md  index.mdx  installation.mdx  introduction.mdx  mint.json  quickstart.mdx  skills_guide.md  telegram_guide.md
docs/agents/: gateway-architecture.mdx  hygiene-pipeline.mdx  session-isolation.mdx  system-prompt.mdx
docs/automation/: cron-jobs.mdx  cron.mdx  heartbeat-daemon.mdx  sop.mdx  voice-ingestion.mdx
docs/capabilities/: path-containment.mdx  search-factory.mdx  self-healing-skills.mdx  tool-authorization.mdx
docs/channels/: channel-routing.mdx  discord.mdx  enterprise-routing.mdx  matrix.mdx  mattermost.mdx  microsoft-teams.mdx  overview.mdx  slack-webhook.mdx  slack.mdx  teams.mdx  telegram.mdx
docs/cli/: agent.mdx  daemon.mdx  doctor.mdx  migrate.mdx  service.mdx
docs/concepts/: qa-matrix.mdx
docs/configuration/: agents.mdx  config-file.mdx  soul-and-user.mdx
docs/dashboard/: overview.mdx
docs/gateway/: multi-tenant-routing.mdx
docs/gateway/security/: dm-pairing-security.mdx  secure-file-operations.mdx
docs/get-started/: features.mdx  overview.mdx  quickstart.mdx
docs/hub/: plugin-manifest.mdx
docs/install/: cloud-hosting.mdx  installation.mdx  migration-guide.mdx  service-management.mdx
docs/integrations/: discord.mdx  mcp.mdx  slack.mdx  tailscale.mdx  telegram.mdx
docs/memory/: dreaming-sweeps.mdx  hybrid-search.mdx  overview.mdx  predictive-compaction.mdx
docs/nodes/: audio-processing.mdx  media-understanding.mdx
docs/plugins/: admin-http-rpc.mdx  codex-computer-use.mdx  memory-wiki.mdx
docs/skills/: built-in.mdx  custom.mdx  overview.mdx
docs/tools/: acp-agents-setup.mdx  acp-agents.mdx  acpx-harness.mdx  advanced-search.mdx  web-browser.mdx  web-fetch.mdx
src/: agents.rs  channel.rs  compactor.rs  config.rs  cron.rs  db.rs  discord.rs  doctor.rs  engine.rs  error.rs  heartbeat.rs  hub_client.rs  hygiene.rs  index.html  main.rs  mcp.rs  migration.rs  onboard.rs  provider.rs  sandbox.rs  sandbox_cmd.rs  service.rs  skills.rs  slack.rs  sop.rs  telegram.rs  web.rs
src/gateway/: allow_from.rs  audio.rs  factory.rs  matrix.rs  mattermost.rs  media.rs  mod.rs  protocol.rs  routing.rs  rpc.rs  security.rs  slack_webhook.rs  tailscale.rs  teams.rs  traits.rs  voice.rs
src/memory/: cognitive.rs  mod.rs  search.rs  wiki.rs
src/protocols/: acp.rs  acpx.rs  mod.rs
src/providers/: mod.rs  plugins.rs
src/tools/: diff.rs  fs.rs  mod.rs  pdf.rs  scraper.rs  vision.rs
src/tools/search/: ddg.rs  mod.rs  searxng.rs
www/: package.json
www/app/: global.css  layout.tsx
www/app/(home)/: layout.tsx  page.tsx
www/app/docs/: layout.tsx
www/components/: ThemeSwitcher.tsx
www/content/docs/: index.mdx  meta.json
www/content/docs/architecture/: cron-scheduler.mdx  memory-rag.mdx  meta.json  multi-agent.mdx  secure-sandbox.mdx
www/content/docs/dashboard/: canvas.mdx  meta.json
www/content/docs/extensibility/: custom-skills.mdx  mcp-servers.mdx  meta.json  (+2 more)
www/lib/: layout.shared.tsx  shared.ts
(+23 files in other folders)
