[package]
name = "Hiroshi"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"
futures-util = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
tempfile = "3.10"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
inquire = "0.7"
axum = { version = "0.7", features = ["ws"], optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
async-trait = "0.1"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"], optional = true }
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
dunce = "1.0"
tar = "0.4"
flate2 = "1.0"
cron = "0.12"
tower = { version = "0.5", features = ["util"] }

[features]
default = ["gateway-ui", "channel-telegram", "channel-discord", "channel-slack"]
kernel-only = []
gateway-ui = ["dep:axum", "dep:tower-http"]
channel-telegram = []
channel-discord = ["dep:tokio-tungstenite"]
channel-slack = ["dep:tokio-tungstenite"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
